# EE405A_2023

./: .gitmodules  README.md
Week04/Assignment/simple_vehicle_sim/: README.md
Week04/Assignment/simple_vehicle_sim/etc/: install_ros_kinetic.sh
Week04/Assignment/simple_vehicle_sim/launch/: run_sim.launch
Week04/Assignment/waypoint_follower/: README.md  package.xml
Week04/Assignment/waypoint_follower/scripts/: wpt_loader.py
Week13/detected_image_saver/final_result/: CMakeLists.txt
Week13/detected_image_saver/final_result/include/final_result/: final_result.h
Week13/detected_image_saver/final_result/src/: final_result.cpp
Week13/detected_image_saver/final_result_msgs/final_result_msgs/: CMakeLists.txt
Week13/detected_image_saver/final_result_msgs/final_result_msgs/msg/: save_image.msg
Week14/final_result/: CMakeLists.txt  package.xml
Week14/final_result/include/final_result/: final_result.h
Week14/final_result/src/: final_result.cpp
Week14/final_result_msgs/final_result_msgs/: package.xml
Week14/final_result_msgs/final_result_msgs/msg/: save_image.msg
Week4/Assignment/eurecarr_vehicle_sim/: README.md
Week4/Assignment/simple_vehicle_sim/: CMakeLists.txt  package.xml
Week4/Assignment/simple_vehicle_sim/cfg/: dynamics_simulation.rviz
Week4/Assignment/simple_vehicle_sim/etc/: install_ros_melodic.sh  install_ros_noetic.sh
Week4/Assignment/simple_vehicle_sim/script/: dynamics.py  simulate_dynamics.py
Week4/Assignment/waypoint_follower/scripts/: controller.py  wpt_loader.py
detected_image_saver/final_result/: CMakeLists.txt  package.xml
